@@ -128,7 +128,7 @@ The default configuration (the one hardcoded in the fim executable) is dumped on
 The \fBscriptfile\fP will be executed right after the default initialization file is executed.
 .TP
 .B \-f {fimrc}, \-\-etc\-fimrc {fimrc}
-Specify an alternative system wide initialization file (default: /etc/fimrc), which will be executed prior to any other configuration file.
+Specify an alternative system wide initialization file (default: /usr/local/etc/fimrc), which will be executed prior to any other configuration file.
 
 .TP
 .B \-F {commands}, \-\-final\-commands {commands}
@@ -155,7 +155,7 @@ Name of the video mode to use video mode (must be listed in /etc/fb.modes).  Def
 No personal initialization file will be read (default is ~/.fimrc) at startup.
 .TP
 .B  \-\-no\-etc\-rc\-file
-No system wide initialization file will be read (default is /etc/fimrc) at startup.
+No system wide initialization file will be read (default is /usr/local/etc/fimrc) at startup.
 .TP
 .B  \-\-no\-internal\-config
 No internal default configuration at startup (uses internal variable _no_default_configuration). Will only provide a minimal working configuration. 
@@ -182,8 +182,8 @@ The \fBaa\fP option may be specified as  \fBaa={['w']}\fP ; the \fB'w'\fP charac
 The \fBsdl\fP option may be specified as  \fBsdl={['w']['m']['r']['W']['M']['R']width:height}\fP , where \fBwidth\fP is and \fBheight\fP are integer numbers specifying the desired resolution; the \fB'w'\fP character requests windowed mode; the \fB'm'\fP character requests mouse pointer display; the \fB'r'\fP character requests support for window resize; the same letters uppercase request explicit negation of the mentioned features.
 
 .TP
-.B  \-\-offset {bytes\-offset}
-Will use the specified \fBoffset\fP (in bytes) for opening the specified files (useful for viewing images on damaged file systems; however, since the internal variables representation is sizeof(int) bytes based, you have a limited offset range: using already chopped image files may be a workaround to this limitation).
+.B  \-\-offset {bytes\-offset[[:upper\-offset]|+offset\-range]}
+Will use the specified \fBoffset\fP (in bytes) for opening the specified files. If \fBupper\-offset\fP is specified, further bytes will be probed, until \fBupper\-offset\fP. If \fB+offset\-range\fP is specified, so many further bytes will be probed. This is useful for viewing images on damaged file systems; however, since the internal variables representation is sizeof(int) bytes based, you have a limited offset range.
 .TP
 .B \-P, \-\-text\-reading
 Enable textreading mode.  This has the effect that fim will display images scaled to the width of the screen, and aligned to the top.  Useful if the images you are watching text pages, all you have to do to get the next piece of text is to press space (in the default key configuration, of course).
@@ -470,12 +470,12 @@ file shipped in the documentation directory to discover the known ones.
 .SH  FILES
 
 .TP 15
-.B /usr/share/doc/fim
+.B /usr/local/share/doc/fim
 The directory with 
 .B Fim
 documentation files.
 .TP 15
-.B /etc/fimrc
+.B /usr/local/etc/fimrc
 The system wide
 .B Fim
 initialization file (executed at startup, after executing the hardcoded configuration).
